added UK support

--- a/src/main/resources/OR.properties
+++ b/src/main/resources/OR.properties
@@ -1,12 +1,13 @@
 article.id=DK151H09R-Q11
 
 pwd=ZWNsZWN0aWM=
-landing.page.DE=https://www.hellofresh.de
-landing.page.UK=https://www.hellofresh.co.uk
-landing.page.CA=https://www.hellofresh.ca
-landing.page.LU=https://www.hellofresh.lu
+
 landing.page.US=https://www.hellofresh.com
-landing.page.DEFAULT=https://www.hellofresh.de
+landing.page.UK=https://www.hellofresh.co.uk
+//landing.page.CA=https://www.hellofresh.ca
+//landing.page.LU=https://www.hellofresh.lu
+//landing.page.DE=https://www.hellofresh.de
+landing.page.DEFAULT=https://www.hellofresh.com
 gender=Mr.
 first.name=Test
 last.name=User
